@@ -175,6 +175,7 @@ Lucian Muresan:
 
 Matteo Pillon:
 	- lcdserializer connectiontype to the hd44780 driver
+	- various improvements to the serial connections of the hd44780 driver
 
 Laurent Arnal:
 	- connectiontype for LIS2 displays from VLSystem (http://www.vlsys.co.kr)
@@ -210,6 +211,11 @@ Eric Pooch:
 Benjamin Wiedmann
 	- Added functionality for HITACHI SP14Q002 gLCD (320x240)
 	- Implemented dynamic wiring scheme selection for SED1330 driver ("ConnectionType")
+
+Frank Jepsen
+	- vdr-wakeup support in hd44780 driver (originally for v0.4.5)
+	- new options for the hd44780 driver
+
 
 Further developers in the sourceforge lcdproc team:
 Mindaugas Idzelis       aim4min
