@@ -438,6 +438,16 @@ Charmap=hd44780_default
 # to increase the delays. Default: 1.
 #DelayMult=2
 
+# Some displays (e.g. vdr-wakeup) need a message from the driver to that it
+# is still alive. When set to a value bigger then null the character in the
+# upper left corner is updated every <KeepAliveDisplay> seconds. Default: 0.
+#KeepAliveDisplay=0
+
+# If you experience occasional garbage on your display you can use this
+# option as workaround. If set to a value bigger than null it forces a
+# full screen refresh <RefreshDiplay> seconds. Default: 0.
+#RefreshDisplay=5
+
 # You can reduce the inserted delays by setting this to false.
 # On fast PCs it is possible your LCD does not respond correctly.
 # Default: true.
