@@ -27,8 +27,9 @@ v.0.5dev (ongoing development)
  + Hitachi SP14Q002 support & ConnectionType setting for sed1330 (Benjamin Wiedmann)
  * replace obsolete index() by strchr() (Guillaume LECERF)
  * fixes for CwLinux driver (Gideon Tsang)
- + new ConnectionType vdr-wakeup in hd44780 driver
+ + new ConnectionType vdr-wakeup in hd44780 driver (originally Frank Jepsen)
  * fixes for the hd44780-serial drivers (Matteo Pillon)
+ + new options for the hd44780 driver (Frank Jepsen)
 
 v.0.5.1
  + config file support in lcdproc client (Andrew Foss)
